[package]
name    = "host-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"
serde       = "1.0.115"
toml        = "0.5.6"

[dev-dependencies]
insta = "1.7"

[dependencies.protocol]
path = "../protocol"

[dependencies.serialport]
version          = "4.0.0"
default-features = false # depends on libudev by default

[dependencies.postcard]
version = "0.5.1"
features = ["use-std"]