[package]
name    = "protocol"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[dependencies.serde]
version          = "1.0.115"
default-features = false
features         = ["derive"]

[dependencies.lpc8xx-hal]
# TODO revert back to upstream dep once fully dynamic pins are merged
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845"]
